Build vmidentity with maven
Change-Id: I4535898aa1448711d14db3deb97560af6ea89f36

--- a/vmidentity/Makefile.am
+++ b/vmidentity/Makefile.am
@@ -1,22 +1,6 @@
 ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = \
-    config \
-    jdepends \
-    tomcat-extensions \
-    ROOT \
     interop \
-    diagnostics \
-    platform \
-    idm \
-    commons \
-    samlauthority \
-    ssolib \
-    websso \
-	lightwaveui \
-    sts \
-    wsTrustClient \
-    install \
-    rest \
-    openidconnect \
-    sso-config
+    build-maven \
+    make-target
