--- a/vmidentity/rest/core/server/pom.xml
+++ b/vmidentity/rest/core/server/pom.xml
@@ -112,19 +112,19 @@
     </dependency>
 
     <dependency>
-      <groupId>com.vmware.identity</groupId>
+      <groupId>com.vmware.identity.commons</groupId>
       <artifactId>samltoken</artifactId>
       <version>${vmware.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>com.vmware.identity</groupId>
+      <groupId>com.vmware.identity.idm</groupId>
       <artifactId>vmware-identity-idm-client</artifactId>
       <version>${vmware.version}</version>
     </dependency>
 
     <dependency>
-      <groupId>com.vmware.identity</groupId>
+      <groupId>com.vmware.identity.idm</groupId>
       <artifactId>vmware-identity-idm-interface</artifactId>
       <version>${vmware.version}</version>
     </dependency>
