--- a/vmidentity/sts/pom.xml
+++ b/vmidentity/sts/pom.xml
@@ -9,11 +9,10 @@
     <version>6.6.1</version>
   </parent>
 
-  <artifactId>lightwaveui</artifactId>
+  <artifactId>sts</artifactId>
   <version>6.6.1</version>
-  <packaging>war</packaging>
-  <name>Lightwave Admin UI</name>
-  <url>http://maven.apache.org</url>
+  <packaging>jar</packaging>
+  <name>sts</name>
 
   <build>
     <finalName>${project.artifactId}</finalName>
@@ -35,7 +34,6 @@
         </configuration>
         <executions>
           <execution>
-            <phase>package</phase>
             <goals>
               <goal>test-jar</goal>
             </goals>
@@ -57,6 +55,7 @@
             </execution>
           </executions>
        </plugin>
+
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-war-plugin</artifactId>
@@ -70,12 +69,12 @@
            <archiveClasses>true</archiveClasses>
            <archive>
             <manifestEntries>
-              <Specification-Title>${lightwaveui.title}</Specification-Title>
-              <Specification-Version>${lightwaveui.version}</Specification-Version>
-              <Specification-Vendor>${lightwaveui.vendor}</Specification-Vendor>
-              <Implementation-Title>${lightwaveui.title}</Implementation-Title>
-              <Implementation-Version>${lightwaveui.version}</Implementation-Version>
-              <Implementation-Vendor>${lightwaveui.vendor}</Implementation-Vendor>
+              <Specification-Title>${sts.title}</Specification-Title>
+              <Specification-Version>${sts.version}</Specification-Version>
+              <Specification-Vendor>${sts.vendor}</Specification-Vendor>
+              <Implementation-Title>${sts.title}</Implementation-Title>
+              <Implementation-Version>${sts.version}</Implementation-Version>
+              <Implementation-Vendor>${sts.vendor}</Implementation-Vendor>
             </manifestEntries>
           </archive>
          </configuration>
@@ -88,6 +87,24 @@
           </execution>
         </executions>
        </plugin>
+       <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>properties-maven-plugin</artifactId>
+        <version>1.0.0</version>
+        <executions>
+          <execution>
+            <phase>initialize</phase>
+            <goals>
+              <goal>read-project-properties</goal>
+            </goals>
+            <configuration>
+              <files>
+                <file>${basedir}/build.properties</file>
+              </files>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
        <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>2.6</version>
@@ -108,25 +125,8 @@
                 </resources>
               </configuration>
             </execution>
-            <execution>
-              <id>copy-sso-common-resources</id>
-              <phase>compile</phase>
-              <goals>
-                 <goal>copy-resources</goal>
-              </goals>
-              <configuration>
-                <outputDirectory>${resDirectory}</outputDirectory>
-                <resources>
-                  <resource>
-                    <directory>${ssoCommonResources}</directory>
-                    <filtering>true</filtering>
-                  </resource>
-                </resources>
-              </configuration>
-            </execution>
            </executions>
        </plugin>
-
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-surefire-plugin</artifactId>
@@ -152,18 +152,14 @@
         <artifactId>vmware-identity-idm-client</artifactId>
         <exclusions>
          <exclusion>
-          <groupId>javax.servlet</groupId>
-          <artifactId>javax.servlet-api</artifactId>
+          <groupId>org.bouncycastle</groupId>
+          <artifactId>bcprov-jdk15</artifactId>
          </exclusion>
         </exclusions>
       </dependency>
       <dependency>
         <groupId>com.vmware.identity.idm</groupId>
         <artifactId>vmware-identity-idm-interface</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>com.vmware.identity</groupId>
-        <artifactId>vmware-identity-websso-client</artifactId>
       </dependency>
       <dependency>
         <groupId>com.vmware.identity</groupId>
@@ -182,10 +178,6 @@
       <!-- Spring dependencies -->
       <dependency>
         <groupId>org.springframework</groupId>
-        <artifactId>spring-core</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
         <artifactId>spring-aop</artifactId>
       </dependency>
       <dependency>
@@ -195,6 +187,10 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
@@ -213,34 +209,7 @@
         <artifactId>spring-webmvc</artifactId>
       </dependency>
 
-
-      <dependency>
-        <groupId>javax.servlet.jsp.jstl</groupId>
-        <artifactId>jstl-api</artifactId>
-        <version>1.2</version>
-        <exclusions>
-         <exclusion>
-          <groupId>javax.servlet</groupId>
-          <artifactId>servlet-api</artifactId>
-         </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.glassfish.web</groupId>
-        <artifactId>jstl-impl</artifactId>
-       <version>1.2</version>
-        <exclusions>
-         <exclusion>
-          <groupId>javax.servlet</groupId>
-          <artifactId>servlet-api</artifactId>
-         </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>3.0.1</version>
-      </dependency>
+      <!-- Logger dependencies -->
       <dependency>
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-api</artifactId>
@@ -265,113 +234,192 @@
         <groupId>org.apache.logging.log4j</groupId>
         <artifactId>log4j-slf4j-impl</artifactId>
       </dependency>
-      <dependency>
-       <groupId>log4j</groupId>
-       <artifactId>log4j</artifactId>
-      </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcprov-jdk15on</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.bouncycastle</groupId>
+      <artifactId>bcpkix-jdk15on</artifactId>
+    </dependency>
 
-      <!-- Http Dependencies -->
-      <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient</artifactId>
-        <version>${httpclient.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpcore</artifactId>
-        <version>${httpcore.version}</version>
-      </dependency>
 
-      <!-- Opensaml dependencies -->
+      <!-- common and opensaml dependencies -->
       <dependency>
         <groupId>commons-codec</groupId>
         <artifactId>commons-codec</artifactId>
-        <version>${commons.codec.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
-        <version>${commons.collection.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-httpclient</groupId>
         <artifactId>commons-httpclient</artifactId>
-        <version>${commons.httpclient.version}</version>
       </dependency>
       <dependency>
         <groupId>commons-lang</groupId>
         <artifactId>commons-lang</artifactId>
-        <version>${commons.lang.version}</version>
       </dependency>
       <dependency>
         <groupId>org.owasp.esapi</groupId>
         <artifactId>esapi</artifactId>
-        <version>${esapi.version}</version>
       </dependency>
       <dependency>
         <groupId>net.jcip</groupId>
         <artifactId>jcip-annotations</artifactId>
-        <version>${jcip.version}</version>
       </dependency>
       <dependency>
         <groupId>joda-time</groupId>
         <artifactId>joda-time</artifactId>
-        <version>${joda.version}</version>
       </dependency>
       <dependency>
         <groupId>ca.juliusdavies</groupId>
         <artifactId>not-yet-commons-ssl</artifactId>
-        <version>${commons-ssl.version}</version>
       </dependency>
       <dependency>
         <groupId>org.opensaml</groupId>
         <artifactId>opensaml</artifactId>
-        <version>${opensaml.version}</version>
       </dependency>
       <dependency>
         <groupId>org.opensaml</groupId>
         <artifactId>openws</artifactId>
-        <version>${openws.version}</version>
       </dependency>
       <dependency>
         <groupId>org.apache.velocity</groupId>
         <artifactId>velocity</artifactId>
-        <version>${velocity.version}</version>
-        <type>pom</type>
       </dependency>
       <dependency>
         <groupId>org.apache.santuario</groupId>
         <artifactId>xmlsec</artifactId>
-        <version>${xml.sec.version}</version>
       </dependency>
       <dependency>
         <groupId>org.opensaml</groupId>
         <artifactId>xmltooling</artifactId>
-        <version>${xml.tooling.version}</version>
       </dependency>
 
-      <!-- Opensaml endorsed dependencies -->
+      <!-- Jna Dependencies -->
       <dependency>
-        <groupId>xerces</groupId>
-        <artifactId>xercesImpl</artifactId>
+        <groupId>net.java.dev.jna</groupId>
+        <artifactId>jna</artifactId>
       </dependency>
       <dependency>
-        <groupId>xalan</groupId>
-        <artifactId>xalan</artifactId>
+        <groupId>net.java.dev.jna</groupId>
+        <artifactId>jna-platform</artifactId>
       </dependency>
       <dependency>
-        <groupId>xml-resolver</groupId>
-        <artifactId>xml-resolver</artifactId>
+        <groupId>javax.servlet</groupId>
+        <artifactId>javax.servlet-api</artifactId>
+        <scope>provided</scope>
       </dependency>
-      <dependency>
-        <groupId>xml-apis</groupId>
-        <artifactId>xml-apis</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>xalan</groupId>
-        <artifactId>serializer</artifactId>
-      </dependency>
+
+    <!-- JAX-WS dependencies-->
+    <dependency>
+      <groupId>javax.activation</groupId>
+      <artifactId>activation</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.fastinfoset</groupId>
+      <artifactId>FastInfoset</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.gmbal</groupId>
+      <artifactId>gmbal-api-only</artifactId>
+      <exclusions>
+          <exclusion>
+            <groupId>javax.management.j2ee</groupId>
+            <artifactId>management-api</artifactId>
+         </exclusion>
+       </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.ha</groupId>
+      <artifactId>ha-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml</groupId>
+      <artifactId>jaxb-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-xjc</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.ws</groupId>
+      <artifactId>jaxws-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>jaxws-rt</artifactId>
+         <exclusions>
+          <exclusion>
+            <groupId>org.jvnet</groupId>
+            <artifactId>mimepull</artifactId>
+         </exclusion>
+        </exclusions>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>jaxws-tools</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.bind</groupId>
+      <artifactId>jsr173_api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.jws</groupId>
+      <artifactId>jsr181-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>jsr250-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.glassfish.external</groupId>
+      <artifactId>management-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jvnet.mimepull</groupId>
+      <artifactId>mimepull</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.ws</groupId>
+      <artifactId>policy</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>xml-resolver</groupId>
+      <artifactId>xml-resolver</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>javax.xml.soap</groupId>
+      <artifactId>saaj-api</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.messaging.saaj</groupId>
+      <artifactId>saaj-impl</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.jvnet.staxex</groupId>
+      <artifactId>stax-ex</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>com.sun.xml.stream.buffer</groupId>
+      <artifactId>streambuffer</artifactId>
+    </dependency>
+
+
+   <!-- Test Dependencies -->
+
      <dependency>
+       <groupId>net.sourceforge.cobertura</groupId>
+       <artifactId>cobertura</artifactId>
+       <scope>test</scope>
+     </dependency>
+    <dependency>
        <groupId>junit</groupId>
        <artifactId>junit</artifactId>
        <scope>test</scope>
@@ -392,19 +440,18 @@
      <dependency>
         <groupId>asm</groupId>
         <artifactId>asm</artifactId>
+        <scope>provided</scope>
      </dependency>
  </dependencies>
 
  <properties>
     <outputDirectory>${basedir}/../build/${PRODUCT_NAME}/packages</outputDirectory>
-    <classesOutputDirectory>${basedir}/../build/${PRODUCT_NAME}/lightwaveui/classes</classesOutputDirectory>
-    <resDirectory>${basedir}/src/main/resources</resDirectory>
-    <ssoCommonResources>${basedir}/../sso-common/src/main/resources/</ssoCommonResources>
+    <classesOutputDirectory>${basedir}/../build/${PRODUCT_NAME}/sts/classes</classesOutputDirectory>
     <skip.unit.tests>false</skip.unit.tests>
     <PRODUCT_NAME>vmware-sts</PRODUCT_NAME>
-    <lightwaveui.title>lightwaveui</lightwaveui.title>
-    <lightwaveui.version>0.0.1.dev</lightwaveui.version>
-    <lightwaveui.vendor>VMWare, Inc.</lightwaveui.vendor>
+    <sts.title>STS</sts.title>
+    <sts.version>0.0.1.dev</sts.version>
+    <sts.vendor>VMWare, Inc.</sts.vendor>
  </properties>
 
 </project>
