Updating specification version for manifest files
Change-Id: Iffc93e4bb0b5eb04f4fc3282bc8ed4f3424deb0c

--- a/vmidentity/lightwaveui/pom.xml
+++ b/vmidentity/lightwaveui/pom.xml
@@ -403,7 +403,7 @@
     <skip.unit.tests>false</skip.unit.tests>
     <PRODUCT_NAME>vmware-sts</PRODUCT_NAME>
     <lightwaveui.title>lightwaveui</lightwaveui.title>
-    <lightwaveui.version>0.0.1.dev</lightwaveui.version>
+    <lightwaveui.version>${vmware.version}</lightwaveui.version>
     <lightwaveui.vendor>VMWare, Inc.</lightwaveui.vendor>
  </properties>
 
