--- a/vmidentity/websso/pom.xml
+++ b/vmidentity/websso/pom.xml
@@ -402,7 +402,7 @@
     <skip.unit.tests>false</skip.unit.tests>
     <PRODUCT_NAME>vmware-sts</PRODUCT_NAME>
     <websso.title>websso</websso.title>
-    <websso.version>0.0.1.dev</websso.version>
+    <websso.version>${vmware.version}</websso.version>
     <websso.vendor>VMWare, Inc.</websso.vendor>
  </properties>
 
