Have our makefile and scripts default to ENV JAVA_HOME if that is defined.
Change-Id: Iafea45c0e4a65405fe95d6f8229e3b62e20971ff

--- a/config/scripts/configure-identity-server.in
+++ b/config/scripts/configure-identity-server.in
@@ -1,6 +1,6 @@
 #!/bin/bash
 #This script is used to configure the Identity service in a container
-JAVA_HOME=@JAVA_HOME@
+JAVA_HOME=${JAVA_HOME:-@JAVA_HOME@}
 JAVA_SEC_PROP=/etc/vmware/java/vmware-override-java.security
 VMWARE_DIR=/opt/vmware
 CLASSPATH=$CLASSPATH:$VMWARE_DIR/jars/*
