--- a/vmidentity/config/vmware-idmd.sh.in
+++ b/vmidentity/config/vmware-idmd.sh.in
@@ -1,7 +1,7 @@
 #!/bin/bash
 
-JAVA_HOME=@JAVA_HOME@
-JSVC_HOME=@COMMONS_DAEMON_HOME@
+JAVA_HOME=${JAVA_HOME:-@JAVA_HOME@}
+JSVC_HOME=${JSVC_HOME:-@COMMONS_DAEMON_HOME@}
 JSVC_BIN=@JSVC@
 
 LIKEWISE_HOME=@LW_BASE_PATH@
