--- a/vmidentity/config/vmware-stsd.sh.in
+++ b/vmidentity/config/vmware-stsd.sh.in
@@ -5,8 +5,8 @@ INSTANCE_NAME=vmware-sts
 VMWARE_INSTANCE=$VMWARE_HOME/$INSTANCE_NAME
 VMWARE_STS_CONFIG=$VMWARE_HOME/config
 
-JAVA_HOME=@JAVA_HOME@
-JSVC_HOME=@COMMONS_DAEMON_HOME@
+JAVA_HOME=${JAVA_HOME:-@JAVA_HOME@}
+JSVC_HOME=${JSVC_HOME:-@COMMONS_DAEMON_HOME@}
 JSVC_BIN=@JSVC@
 DEFAULT_MAX_RAM=256m
 
@@ -27,7 +27,7 @@ STSD_INITD_ERR_LOG="$STSD_LOG_DIR/utils/$SERVICE_NAME.err"
 
 # Tomcat Catalina settings
 
-CATALINA_HOME=@TOMCAT_HOME@
+CATALINA_HOME=${CATALINA_HOME:-@TOMCAT_HOME@}
 CATALINA_BASE="$VMWARE_HOME/$INSTANCE_NAME"
 
 ShowUsage()
