--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -35,7 +35,8 @@ vmdird_SOURCES = \
     vmevent.c \
     urgentrepl.c \
     tracklastlogin.c \
-    vmdirurgentrepl_sstub.c
+    vmdirurgentrepl_sstub.c \
+    vmdirraft_sstub.c
 
 if HAVE_MDB_STORE
 VMDIRD_BACKEND_INCLUDES=
@@ -114,9 +115,12 @@ CLEANFILES = \
     vmdirsuperlog_sstrub.c \
     vmdirurgentrepl_h.h \
     vmdirurgentrepl_cstub.c \
-    vmdirurgentrepl_sstub.c
+    vmdirurgentrepl_sstub.c \
+    vmdirraft_h.h \
+    vmdirraft_cstub.c \
+    vmdirraft_sstub.c
 
-BUILT_SOURCES = vmdir_h.h vmdirftp_h.h vmdirdbcp_h.h srp_verifier_h.h vmdirsuperlog_h.h vmdirurgentrepl_h.h
+BUILT_SOURCES = vmdir_h.h vmdirftp_h.h vmdirdbcp_h.h srp_verifier_h.h vmdirsuperlog_h.h vmdirurgentrepl_h.h vmdirraft_h.h
 
 vmdir_h.h vmdir_sstub.c: $(idl_srcdir)/vmdir.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdir_h.h -sstub_pref Srv_ -I$(idl_srcdir) $<
@@ -135,3 +139,6 @@ vmdirsuperlog_h.h vmdirsuperlog_sstub.c: $(idl_srcdir)/vmdirsuperlog.idl
 
 vmdirurgentrepl_h.h vmdirurgentrepl_sstub.c: $(idl_srcdir)/vmdirurgentrepl.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirurgentrepl_h.h -sstub_pref Srv_ -I$(idl_srcdir) $<
+
+vmdirraft_h.h vmdirraft_sstub.c: $(idl_srcdir)/vmdirraft.idl
+	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirraft_h.h -cstub_pref Cli_ -sstub_pref Srv_ -I$(idl_srcdir) $<
