Fix compilation errors
Change-Id: I7075c6e2e09929a917a240bc41907af25b5ddb84

--- a/vmdir/configure.ac
+++ b/vmdir/configure.ac
@@ -28,10 +28,10 @@ case "${host_os}:${host_cpu}" in
 esac
 
 
-CPPFLAGS="$CPPFLAGS -D_REENTRANT -D_GNU_SOURCE -fPIC"
+CPPFLAGS="$CPPFLAGS -D_REENTRANT -D_GNU_SOURCE -fPIC -g"
 
 AM_CPPFLAGS="$AM_CPPFLAGS -I${top_srcdir}/include"
-AM_CFLAGS="$AM_CFLAGS -Wall -Werror -fno-strict-aliasing"
+AM_CFLAGS="$AM_CFLAGS -Wall -Werror -fno-strict-aliasing -g"
 
 AC_SUBST(AM_CPPFLAGS)
 AC_SUBST(AM_CFLAGS)
