Revert Maven build related changes.
Change-Id: I189064e9da1eac99977fc8521ede2959d741c39b

--- a/vmidentity/Makefile.am
+++ b/vmidentity/Makefile.am
@@ -1,6 +1,22 @@
 ACLOCAL_AMFLAGS = -I m4
 
 SUBDIRS = \
+    config \
+    jdepends \
+    tomcat-extensions \
+    ROOT \
     interop \
-    build-maven \
-    make-target
+    diagnostics \
+    platform \
+    idm \
+    commons \
+    samlauthority \
+    ssolib \
+    websso \
+	lightwaveui \
+    sts \
+    wsTrustClient \
+    install \
+    rest \
+    openidconnect \
+    sso-config
