--- a/vmidentity/commons/samltoken/pom.xml
+++ b/vmidentity/commons/samltoken/pom.xml
@@ -1,184 +1,41 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<?xml version="1.0" encoding="UTF-8"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-
-  <parent>
-    <groupId>com.vmware.identity.commons</groupId>
-    <artifactId>vmware-identity-commons</artifactId>
-    <version>6.6.1</version>
-  </parent>
-
+  <groupId>com.vmware.identity</groupId>
   <artifactId>samltoken</artifactId>
-  <version>6.6.1</version>
-  <packaging>jar</packaging>
-  <name>samltoken</name>
-
-<pluginRepositories>
-  <pluginRepository>
-    <id>com.springsource.repository.bundles.release</id>
-    <name>SpringSource Enterprise Bundle Repository</name>
-    <url>http://repository.springsource.com/maven/bundles/release</url>
-  </pluginRepository>
-</pluginRepositories>
-
-  <build>
-    <finalName>${project.artifactId}</finalName>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven.compiler.plugin.version}</version>
-        <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>${maven.jar.plugin.version}</version>
-        <configuration>
-          <outputDirectory>${outputDirectory}</outputDirectory>
-          <archive>
-            <manifestFile>${bundle.manifestTemplatePath}</manifestFile>
-          </archive>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-          <configuration>
-            <outputDirectory>${outputDirectory}</outputDirectory>
-          </configuration>
-          <executions>
-            <execution>
-              <id>attach-sources</id>
-              <goals>
-                <goal>jar</goal>
-              </goals>
-            </execution>
-          </executions>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven.surefire.plugin.version}</version>
-          <configuration>
-            <skipTests>${skip.unit.tests}</skipTests>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>com.springsource.bundlor</groupId>
-          <artifactId>com.springsource.bundlor.maven</artifactId>
-          <version>1.0.0.RELEASE</version>
-          <executions>
-           <execution>
-              <id>bundlor</id>
-              <phase>install</phase>
-              <goals>
-                <goal>bundlor</goal>
-              </goals>
-              <configuration>
-                <manifestTemplate>
-                    Bundle-ManifestVersion: ${bundle.manifest.version}
-                    Bundle-Name: ${bundle.name}
-                    Bundle-Vendor: ${bundle.vendor}
-                </manifestTemplate>
-                <bundleSymbolicName>${bundle.symbolic.name}</bundleSymbolicName>
-                <bundleVersion>${bundle.version}</bundleVersion>
-                <inputPath>${outputDirectory}/${project.artifactId}.jar</inputPath>
-                <outputPath>${build.dist}/${project.artifactId}.jar</outputPath>
-                <manifestTemplatePath>${bundle.manifestTemplatePath}</manifestTemplatePath>
-              </configuration>
-            </execution>
-          </executions>
-        </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.10</version>
-          <executions>
-            <execution>
-              <id>copy</id>
-              <phase>install</phase>
-              <goals>
-                <goal>copy</goal>
-              </goals>
-              <configuration>
-                <artifactItems>
-                  <artifactItem>
-                    <groupId>com.vmware.identity.commons</groupId>
-                    <artifactId>samltoken</artifactId>
-                    <version>${vmware.version}</version>
-                    <type>jar</type>
-                    <overWrite>true</overWrite>
-                    <outputDirectory>${publishDirectory}</outputDirectory>
-                    <destFileName>samltoken.jar</destFileName>
-                  </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-    </plugins>
-  </build>
-
+  <version>6.6.0</version>
+  <name>VMwareIdentity-STS-Samltoken</name>
   <dependencies>
-
     <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.2</version>
     </dependency>
-
     <dependency>
-      <groupId>commons-codec</groupId>
-      <artifactId>commons-codec</artifactId>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-1.2-api</artifactId>
+      <version>2.0.2</version>
     </dependency>
-
-    <!-- Logger Dependencies -->
-
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-slf4j-impl</artifactId>
+      <version>2.2</version>
+    </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
+      <version>1.7.10</version>
     </dependency>
-
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
+      <version>1.7.10</version>
     </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
-    </dependency>
-
-     <dependency>
-       <groupId>log4j</groupId>
-       <artifactId>log4j</artifactId>
-       <version>${log4j.version}</version>
-     </dependency>
-     <dependency>
-       <groupId>junit</groupId>
-       <artifactId>junit</artifactId>
-     </dependency>
-
- </dependencies>
-
- <properties>
-    <bundle.manifestTemplatePath>${basedir}/conf/osgi/ssoClientTemplate.mf</bundle.manifestTemplatePath>
-    <build.dist>${basedir}/../../build/${PRODUCT_NAME}/dist</build.dist>
-    <outputDirectory>${basedir}/../../build/${PRODUCT_NAME}/packages</outputDirectory>
-    <publishDirectory>${basedir}/../../build/${PRODUCT_NAME}/publish</publishDirectory>
-    <skip.unit.tests>false</skip.unit.tests>
-    <PRODUCT_NAME>vmware-sts</PRODUCT_NAME>
- </properties>
-
+  </dependencies>
 </project>
