--- a/vmidentity/idm/interface/pom.xml
+++ b/vmidentity/idm/interface/pom.xml
@@ -1,123 +1,51 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+<?xml version="1.0" encoding="UTF-8"?>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
-
-  <parent>
-    <groupId>com.vmware.identity.idm</groupId>
-    <artifactId>vmware-identity-idm</artifactId>
-    <version>6.6.1</version>
-  </parent>
-
+  <groupId>com.vmware.identity.idm</groupId>
   <artifactId>vmware-identity-idm-interface</artifactId>
   <version>6.6.1</version>
-  <packaging>jar</packaging>
-  <name>vmware-identity-idm-interface</name>
-
-  <properties>
-    <outputDirectory>${basedir}/../../build/vmware-sts/packages</outputDirectory>
-  </properties>
-
-  <build>
-    <finalName>${project.artifactId}</finalName>
-
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.5.1</version>
-        <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
-        </configuration>
-      </plugin>
-          <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>3.0.1</version>
-        <configuration>
-          <outputDirectory>${outputDirectory}</outputDirectory>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-dependency-plugin</artifactId>
-        <version>2.10</version>
-        <executions>
-          <execution>
-            <id>copy</id>
-            <phase>package</phase>
-            <goals>
-              <goal>copy</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>com.vmware.identity.idm</groupId>
-                  <artifactId>vmware-identity-idm-interface</artifactId>
-                  <version>${vmware.version}</version>
-                  <type>jar</type>
-                  <outputDirectory>${outputDirectory}</outputDirectory>
-                  <destFileName>vmware-identity-idm-interface.jar</destFileName>
-                </artifactItem>
-              </artifactItems>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-   </plugins>
-  </build>
-
+  <name>VMwareIdentity-STS-IDM-Interface</name>
   <dependencies>
-    <!-- Vmware Dependencies -->
-    <dependency>
-      <groupId>com.vmware.identity</groupId>
-      <artifactId>vmware-identity-diagnostics</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>net.sourceforge.cobertura</groupId>
-      <artifactId>cobertura</artifactId>
-    </dependency>
-
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
+      <version>2.5</version>
     </dependency>
-
-    <!-- Logger Dependencies -->
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-    </dependency>
-
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
+      <version>2.2</version>
     </dependency>
-
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-1.2-api</artifactId>
+      <version>2.0.2</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.apache.logging.log4j</groupId>
+      <artifactId>log4j-core</artifactId>
+      <version>2.2</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-slf4j-impl</artifactId>
+      <version>2.2</version>
     </dependency>
-
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
+      <version>1.7.10</version>
     </dependency>
-
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>jcl-over-slf4j</artifactId>
+      <version>1.7.10</version>
     </dependency>
     <dependency>
       <groupId>com.vmware.identity</groupId>
-      <artifactId>vmware-identity-platform</artifactId>
+      <artifactId>diagnostics</artifactId>
+      <version>6.6.1</version>
     </dependency>
   </dependencies>
-
 </project>
