--- a/vmidentity/lightwaveui/pom.xml
+++ b/vmidentity/lightwaveui/pom.xml
@@ -1,410 +1,35 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  <!--
 
+ * Copyright © 2012-2016 VMware, Inc.  All Rights Reserved.
+ *
+ * Licensed under the Apache License, Version 2.0 (the “License”); you may not
+ * use this file except in compliance with the License.  You may obtain a copy
+ * of the License at http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an “AS IS” BASIS, without
+ * warranties or conditions of any kind, EITHER EXPRESS OR IMPLIED.  See the
+ * License for the specific language governing permissions and limitations
+ * under the License.
+
+-->
   <modelVersion>4.0.0</modelVersion>
-
-  <parent>
-    <groupId>com.vmware.identity</groupId>
-    <artifactId>vmware-identity</artifactId>
-    <version>6.6.1</version>
-  </parent>
-
+  <groupId>com.vmware</groupId>
   <artifactId>lightwaveui</artifactId>
-  <version>6.6.1</version>
   <packaging>war</packaging>
+  <version>0.0.1-SNAPSHOT</version>
   <name>Lightwave Admin UI</name>
   <url>http://maven.apache.org</url>
-
-  <build>
-    <finalName>${project.artifactId}</finalName>
-    <plugins>
-      <plugin>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>${maven.compiler.plugin.version}</version>
-        <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-jar-plugin</artifactId>
-        <version>${maven.jar.plugin.version}</version>
-        <configuration>
-          <outputDirectory>${outputDirectory}</outputDirectory>
-        </configuration>
-        <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>test-jar</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-source-plugin</artifactId>
-          <configuration>
-            <outputDirectory>${outputDirectory}</outputDirectory>
-          </configuration>
-          <executions>
-            <execution>
-              <id>attach-sources</id>
-              <goals>
-                <goal>jar</goal>
-              </goals>
-            </execution>
-          </executions>
-       </plugin>
-       <plugin>
-         <groupId>org.apache.maven.plugins</groupId>
-         <artifactId>maven-war-plugin</artifactId>
-         <version>2.6</version>
-         <configuration>
-           <outputDirectory>${outputDirectory}</outputDirectory>
-           <warName>${project.artifactId}</warName>
-           <packagingExcludes>WEB-INF/classes/vmware-stsd,WEB-INF/classes/sso-firewall.json,
-              WEB-INF/classes/project.properties,WEB-INF/classes/com/**, WEB-INF/classes/org/**,
-              ${lib.excludes.pattern}</packagingExcludes>
-           <archiveClasses>true</archiveClasses>
-           <archive>
-            <manifestEntries>
-              <Specification-Title>${lightwaveui.title}</Specification-Title>
-              <Specification-Version>${lightwaveui.version}</Specification-Version>
-              <Specification-Vendor>${lightwaveui.vendor}</Specification-Vendor>
-              <Implementation-Title>${lightwaveui.title}</Implementation-Title>
-              <Implementation-Version>${lightwaveui.version}</Implementation-Version>
-              <Implementation-Vendor>${lightwaveui.vendor}</Implementation-Vendor>
-            </manifestEntries>
-          </archive>
-         </configuration>
-         <executions>
-          <execution>
-            <phase>package</phase>
-            <goals>
-              <goal>war</goal>
-            </goals>
-          </execution>
-        </executions>
-       </plugin>
-       <plugin>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>2.6</version>
-          <executions>
-            <execution>
-              <id>copy-resources</id>
-              <phase>package</phase>
-              <goals>
-                 <goal>copy-resources</goal>
-              </goals>
-              <configuration>
-                <outputDirectory>${classesOutputDirectory}</outputDirectory>
-                <resources>
-                  <resource>
-                    <directory>${basedir}/target/classes/</directory>
-                    <filtering>true</filtering>
-                  </resource>
-                </resources>
-              </configuration>
-            </execution>
-            <execution>
-              <id>copy-sso-common-resources</id>
-              <phase>compile</phase>
-              <goals>
-                 <goal>copy-resources</goal>
-              </goals>
-              <configuration>
-                <outputDirectory>${resDirectory}</outputDirectory>
-                <resources>
-                  <resource>
-                    <directory>${ssoCommonResources}</directory>
-                    <filtering>true</filtering>
-                  </resource>
-                </resources>
-              </configuration>
-            </execution>
-           </executions>
-       </plugin>
-
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-surefire-plugin</artifactId>
-          <version>${maven.surefire.plugin.version}</version>
-          <configuration>
-            <skipTests>${skip.unit.tests}</skipTests>
-            <additionalClasspathElements>
-                <additionalClasspathElement>${basedir}/src/main/webapp/</additionalClasspathElement>
-            </additionalClasspathElements>
-          </configuration>
-        </plugin>
-    </plugins>
-  </build>
-
   <dependencies>
-
-      <dependency>
-        <groupId>com.vmware.identity</groupId>
-        <artifactId>vmware-identity-diagnostics</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>com.vmware.identity.idm</groupId>
-        <artifactId>vmware-identity-idm-client</artifactId>
-        <exclusions>
-         <exclusion>
-          <groupId>javax.servlet</groupId>
-          <artifactId>javax.servlet-api</artifactId>
-         </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>com.vmware.identity.idm</groupId>
-        <artifactId>vmware-identity-idm-interface</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>com.vmware.identity</groupId>
-        <artifactId>vmware-identity-websso-client</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>com.vmware.identity</groupId>
-        <artifactId>afd-heartbeat-service</artifactId>
-        <scope>provided</scope>
-      </dependency>
-      <dependency>
-        <groupId>com.vmware.identity.commons</groupId>
-        <artifactId>samltoken</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>com.vmware.identity</groupId>
-        <artifactId>samlauthority</artifactId>
-      </dependency>
-
-      <!-- Spring dependencies -->
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-core</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-aop</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-beans</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-context</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-expression</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-test</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-web</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework</groupId>
-        <artifactId>spring-webmvc</artifactId>
-      </dependency>
-
-
-      <dependency>
-        <groupId>javax.servlet.jsp.jstl</groupId>
-        <artifactId>jstl-api</artifactId>
-        <version>1.2</version>
-        <exclusions>
-         <exclusion>
-          <groupId>javax.servlet</groupId>
-          <artifactId>servlet-api</artifactId>
-         </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>org.glassfish.web</groupId>
-        <artifactId>jstl-impl</artifactId>
-       <version>1.2</version>
-        <exclusions>
-         <exclusion>
-          <groupId>javax.servlet</groupId>
-          <artifactId>servlet-api</artifactId>
-         </exclusion>
-        </exclusions>
-      </dependency>
-      <dependency>
-        <groupId>javax.servlet</groupId>
-        <artifactId>javax.servlet-api</artifactId>
-        <version>3.0.1</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-api</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-core</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>jcl-over-slf4j</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-1.2-api</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-slf4j-impl</artifactId>
-      </dependency>
-      <dependency>
-       <groupId>log4j</groupId>
-       <artifactId>log4j</artifactId>
-      </dependency>
-
-      <!-- Http Dependencies -->
-      <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpclient</artifactId>
-        <version>${httpclient.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.httpcomponents</groupId>
-        <artifactId>httpcore</artifactId>
-        <version>${httpcore.version}</version>
-      </dependency>
-
-      <!-- Opensaml dependencies -->
-      <dependency>
-        <groupId>commons-codec</groupId>
-        <artifactId>commons-codec</artifactId>
-        <version>${commons.codec.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-collections</groupId>
-        <artifactId>commons-collections</artifactId>
-        <version>${commons.collection.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-httpclient</groupId>
-        <artifactId>commons-httpclient</artifactId>
-        <version>${commons.httpclient.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>commons-lang</groupId>
-        <artifactId>commons-lang</artifactId>
-        <version>${commons.lang.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.owasp.esapi</groupId>
-        <artifactId>esapi</artifactId>
-        <version>${esapi.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>net.jcip</groupId>
-        <artifactId>jcip-annotations</artifactId>
-        <version>${jcip.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>joda-time</groupId>
-        <artifactId>joda-time</artifactId>
-        <version>${joda.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>ca.juliusdavies</groupId>
-        <artifactId>not-yet-commons-ssl</artifactId>
-        <version>${commons-ssl.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>opensaml</artifactId>
-        <version>${opensaml.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>openws</artifactId>
-        <version>${openws.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.velocity</groupId>
-        <artifactId>velocity</artifactId>
-        <version>${velocity.version}</version>
-        <type>pom</type>
-      </dependency>
-      <dependency>
-        <groupId>org.apache.santuario</groupId>
-        <artifactId>xmlsec</artifactId>
-        <version>${xml.sec.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>org.opensaml</groupId>
-        <artifactId>xmltooling</artifactId>
-        <version>${xml.tooling.version}</version>
-      </dependency>
-
-      <!-- Opensaml endorsed dependencies -->
-      <dependency>
-        <groupId>xerces</groupId>
-        <artifactId>xercesImpl</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>xalan</groupId>
-        <artifactId>xalan</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>xml-resolver</groupId>
-        <artifactId>xml-resolver</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>xml-apis</groupId>
-        <artifactId>xml-apis</artifactId>
-      </dependency>
-      <dependency>
-        <groupId>xalan</groupId>
-        <artifactId>serializer</artifactId>
-      </dependency>
      <dependency>
-       <groupId>junit</groupId>
-       <artifactId>junit</artifactId>
-       <scope>test</scope>
-     </dependency>
-     <dependency>
-       <groupId>org.easymock</groupId>
-       <artifactId>easymock</artifactId>
-       <scope>test</scope>
-     </dependency>
-     <dependency>
-        <groupId>org.objenesis</groupId>
-        <artifactId>objenesis</artifactId>
-     </dependency>
-     <dependency>
-        <groupId>cglib</groupId>
-        <artifactId>cglib</artifactId>
-     </dependency>
-     <dependency>
-        <groupId>asm</groupId>
-        <artifactId>asm</artifactId>
-     </dependency>
- </dependencies>
-
- <properties>
-    <outputDirectory>${basedir}/../build/${PRODUCT_NAME}/packages</outputDirectory>
-    <classesOutputDirectory>${basedir}/../build/${PRODUCT_NAME}/lightwaveui/classes</classesOutputDirectory>
-    <resDirectory>${basedir}/src/main/resources</resDirectory>
-    <ssoCommonResources>${basedir}/../sso-common/src/main/resources/</ssoCommonResources>
-    <skip.unit.tests>false</skip.unit.tests>
-    <PRODUCT_NAME>vmware-sts</PRODUCT_NAME>
-    <lightwaveui.title>lightwaveui</lightwaveui.title>
-    <lightwaveui.version>${vmware.version}</lightwaveui.version>
-    <lightwaveui.vendor>VMWare, Inc.</lightwaveui.vendor>
- </properties>
-
+      <groupId>javax.servlet</groupId>
+      <artifactId>javax.servlet-api</artifactId>
+      <version>3.0.1</version>
+    </dependency>
+  </dependencies>
+  <build>
+    <finalName>lightwaveui</finalName>
+  </build>
 </project>
