Fix systemd service dependency order.
Change-Id: I1cac7a07a08a9fa80704900befdf48c74272ed82
(cherry picked from commit 48ab0fc2a147898cc6c334aab2efe80121ac94dd)

--- a/vmidentity/config/vmware-stsd.service.in
+++ b/vmidentity/config/vmware-stsd.service.in
@@ -1,6 +1,6 @@
 [Unit]
 Description=VMware Secure Token Service
-After=syslog.target network.target
+After=syslog.target network.target vmware-idmd.service
 Requires=vmware-idmd.service
 
 [Service]
