vmca: Add --enable-python and modified boost,sqlite3 checks
The Python module is not generally useful, but needed for some.
The Boost library is very hard to handle correctly and I've not done so here,
but made it so it works for my needs.

Sqlite3 needs -ldl/-lpython on some platforms.

Change-Id: I1a9cb7187f2874610cf1b447e77f5c25f905bed2

--- a/vmca/Makefile.am
+++ b/vmca/Makefile.am
@@ -1,5 +1,11 @@
 ACLOCAL_AMFLAGS = -I m4
 
+PYTHON_DIR =
+
+if ENABLE_PYTHON
+    PYTHON_DIR += python
+endif
+
 SUBDIRS = \
     include \
     config  \
@@ -9,4 +15,5 @@ SUBDIRS = \
     client  \
     certool \
     jdepends \
-    java
+    java \
+    $(PYTHON_DIR)
