add support for vmpac authz data
Change-Id: I541d63072fcfb062ee01abb125eb87ca4d974cbe

--- a/vmdir/server/kdckrb5/Makefile.am
+++ b/vmdir/server/kdckrb5/Makefile.am
@@ -2,6 +2,7 @@ noinst_LTLIBRARIES = libvmkrb5.la
 
 libvmkrb5_la_SOURCES = \
     authenticator.c    \
+    authzdata.c        \
     asreq.c            \
     apreq.c            \
     checksum.c         \
