--- a/vmdir/server/vmdir/Makefile.am
+++ b/vmdir/server/vmdir/Makefile.am
@@ -38,7 +38,8 @@ vmdird_SOURCES = \
     tenantmgmt.c \
     tombstone.c \
     tracklastlogin.c \
-    vmdirurgentrepl_sstub.c
+    vmdirurgentrepl_sstub.c \
+    vmdir_pac_cstub.c
 
 if HAVE_MDB_STORE
 VMDIRD_BACKEND_INCLUDES=
@@ -47,6 +48,7 @@ VMDIRD_BACKEND_STORE= $(top_builddir)/server/mdb-store/libmdb-store.la
 endif
 
 vmdird_CPPFLAGS = \
+    -g \
     -I$(top_srcdir)/include \
     -I$(top_srcdir)/include/public \
     -I$(top_srcdir)/thirdparty/openldap/include \
@@ -117,9 +119,11 @@ CLEANFILES = \
     vmdirsuperlog_sstrub.c \
     vmdirurgentrepl_h.h \
     vmdirurgentrepl_cstub.c \
-    vmdirurgentrepl_sstub.c
+    vmdirurgentrepl_sstub.c \
+    vmdir_pac_h.h \
+    vmdir_pac_cstub.c
 
-BUILT_SOURCES = vmdir_h.h vmdirftp_h.h vmdirdbcp_h.h srp_verifier_h.h vmdirsuperlog_h.h vmdirurgentrepl_h.h
+BUILT_SOURCES = vmdir_h.h vmdirftp_h.h vmdirdbcp_h.h srp_verifier_h.h vmdirsuperlog_h.h vmdirurgentrepl_h.h vmdir_pac_h.h
 
 vmdir_h.h vmdir_sstub.c: $(idl_srcdir)/vmdir.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdir_h.h -sstub_pref Srv_ -I$(idl_srcdir) $<
@@ -138,3 +142,6 @@ vmdirsuperlog_h.h vmdirsuperlog_sstub.c: $(idl_srcdir)/vmdirsuperlog.idl
 
 vmdirurgentrepl_h.h vmdirurgentrepl_sstub.c: $(idl_srcdir)/vmdirurgentrepl.idl
 	$(IDL) $(IDLFLAGS) -keep c_source -header vmdirurgentrepl_h.h -sstub_pref Srv_ -I$(idl_srcdir) $<
+
+vmdir_pac_cstub.c vmdir_pac_h.h: $(idl_srcdir)/vmdir_pac.idl $(idl_srcdir)/vmdir_pac.acf $(idl_srcdir)/vmdir_pac_type.h
+	$(IDL) $(IDLFLAGS) -keep c_source -header vmdir_pac_h.h -I$(idl_srcdir) $<
