--- a/vmidentity/openidconnect/protocol/pom.xml
+++ b/vmidentity/openidconnect/protocol/pom.xml
@@ -3,11 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.vmware.identity</groupId>
     <artifactId>openidconnect-protocol</artifactId>
-    <version>6.6.1</version>
+    <version>6.6.3</version>
 
     <properties>
         <java.version>1.7</java.version>
-        <vmware.version>6.6.1</vmware.version>
+        <vmware.version>6.6.3</vmware.version>
         <nimbus-jose-jwt.version>4.12</nimbus-jose-jwt.version>
         <commons-validator.version>1.4.0</commons-validator.version>
         <commons-lang3.version>3.3.2</commons-lang3.version>
@@ -53,7 +53,7 @@
         <repository>
             <id>lightwave</id>
             <name>lightwave</name>
-            <url>http://artifactory.ec.eng.vmware.com:8081/artifactory/lightwave</url>
+            <url>https://api.bintray.com/maven/vmware/lightwave-maven/lightwave</url>
         </repository>
     </distributionManagement>
 
