--- a/vmidentity/openidconnect/sample/pom.xml
+++ b/vmidentity/openidconnect/sample/pom.xml
@@ -3,12 +3,12 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.vmware.identity</groupId>
     <artifactId>openidconnect-sample-rp</artifactId>
-    <version>6.6.1</version>
+    <version>6.6.3</version>
     <packaging>war</packaging>
 
     <properties>
         <java.version>1.7</java.version>
-        <vmware.version>6.6.1</vmware.version>
+        <vmware.version>6.6.3</vmware.version>
         <javax.servlet-api.version>3.0.1</javax.servlet-api.version>
         <bouncycastle.version>1.47</bouncycastle.version>
         <springframework.version>4.0.6.RELEASE</springframework.version>
@@ -54,7 +54,7 @@
         <repository>
             <id>lightwave</id>
             <name>lightwave</name>
-            <url>http://artifactory.ec.eng.vmware.com:8081/artifactory/lightwave</url>
+            <url>https://api.bintray.com/maven/vmware/lightwave-maven/lightwave</url>
         </repository>
     </distributionManagement>
 
