make vmsock a static lib
Change-Id: Ieaf09a27062ea39ac6ab42a14b34cdca484b0548

--- a/vmdns/client/Makefile.am
+++ b/vmdns/client/Makefile.am
@@ -20,6 +20,7 @@ libvmdnsclient_la_SOURCES = \
 
 libvmdnsclient_la_LIBADD = \
     @top_builddir@/common/libcommon.la \
+    @top_builddir@/vmsock/api/libvmsock.la \
     @DCERPC_LIBS@ \
     @LWBASE_LIBS@ \
     @GSSAPI_LIBS@ \
